# 24-03-2022
Modifica file Index.php, aggiunta di Bootstrap + Statistiche del sito
TODO testare se popolando le tabella, nella Home Page viene generata la tabella del top Utenti.

# 04-04-2022
include './utilities/databaseSetup.php'; ora fa tutto il lavoro della connessione al db, basta 
importare questa stringa di codice.

# 10-04-2022
Aggiornare alla versione di PHP 8! Alcuni metodi hanno cambiato nome dalla v7 --> v8
Aggiunto sistema di redirect dopo il login, alla pagina "chiamante" tramite metodo GET["redirect"]
Guardare esempio in /user/ModificaProfilo.php

# 11-04-2022
Creato il Navbar generale, da importare per ogni pagina del sito (Attenzione: Bisogna attivare la session!).
TODO: Modificare il file Conferenze.php rendendo la "C" minuscola! [DONE]

# 14-04-2022
Aggiornato la pagina dei dettagli di una Conferenza, aggiunto pagina per la creazione dei una conferenza
accessibile solo agli amministratori.
TODO: FARE la pagina della creazione di una conferenza.
TODO: Gestire il caso in cui un utente accede a "dettagli.php" senza parametri o con parametri errati.